video bg change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Project</title>
 </head>
 
 <body>
@@ -49,7 +49,8 @@
             <table>
                 <tr>
                     <td><audio src="Ek Zindagi - Angrezi Medium.mp3" controls></audio></td>
-                    <td><video src="VID-20230626-WA0020.mp4" height="350px" width="200px" controls></video></td>
+                    <td><video src="VID-20230626-WA0020.mp4" height="350px" width="200px" controls
+                            style="background-color: black;"></video></td>
                 </tr>
             </table>
         </section>
